# autoresearch-lora

./: .gitignore  README.md  batch.yaml  config.yaml  config_translator.py  eval_prompts.txt  prepare.py  program.md  pyproject.toml  reasoning.md  results.tsv  score.py  train.py
docs/: brainstorm-log.md  design.md  validation.md
docs/plans/: 2026-03-13-autoresearch-lora.md
tests/: test_config.py  test_score.py
